--- a/src/main/resources/assets/pandoras_creatures/lang/en_us.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/en_us.json
@@ -69,6 +69,7 @@
 //	 Item Tooltips, [Localising Tools] can be used here.
 	"item.pandoras_creatures.acidic_archvine_spawn_egg.tooltip": "#c7Needs to be placed under\n#c7Jungle Leaves or Netherrack",
 	"item.pandoras_creatures.arachnon_hammer.tooltip": "#c7This tool will break\n#c7blocks in a 3x3 radius",
+	"item.pandoras_creatures.plant_hat.tooltip": "#c7Wearing this hat makes you\n#c7invisible to Acidic Archvines",
 	
 //	 Items
 	"item.pandoras_creatures.arachnon_hammer": "Arachnon Hammer",
@@ -87,6 +88,7 @@
 	"item.pandoras_creatures.bufflon_player_seats": "Bufflon Player Seats",
 	"item.pandoras_creatures.bufflon_small_storage": "Bufflon Small Storage",
 	"item.pandoras_creatures.bufflon_large_storage": "Bufflon Large Storage",
+	"item.pandoras_creatures.plant_hat": "Plant Hat",
 	
 //	 Blocks
 	"block.pandoras_creatures.arachnon_crystal": "Arachnon Crystal",
