Main Class Cleanup and more EndTroll content
- Added new Language file.
- Moved network code out of Main.
- Added EndTroll scream.
- Added EndTroll long range attack.
- Added new EndTrollBullets for the EndTrolls ranged attaack.
- Updated the Features registry to use the new system.

--- a/src/main/resources/assets/pandoras_creatures/lang/en_us.json
+++ b/src/main/resources/assets/pandoras_creatures/lang/en_us.json
@@ -105,6 +105,9 @@
 	"entity.pandoras_creatures.acidic_archvine": "Acidic Archvine",
 	"entity.pandoras_creatures.bufflon": "Bufflon",
 	"entity.pandoras_creatures.end_troll": "End Troll",
+	"entity.pandoras_creatures.end_troll_bullet_poison": "Poison End Troll Bullet",
+	"entity.pandoras_creatures.end_troll_bullet_wither": "Wither End Troll Bullet",
+	"entity.pandoras_creatures.end_troll_bullet_damage": "Damage End Troll Bullet",
 	
 //	 Button Tool Tips
 	"gui.button.pandoras_creatures.discord": "Discord",
